<resources>
    <string name="app_name">Tadbeer</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="signup">Sign Up</string>
    <string name="confirm_password">confirm password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="login_failed">Login failed...please try again!</string>
    <string name="error_accessing_server">Error Accessing Server!</string>
    <string name="invalid_email_address">Invalid email address</string>
    <string name="error_password_format">Password must be atleast 8 characters long</string>
    <string name="bills">Bills</string>
    <string name="cards">Cards</string>
    <string name="warranties">Warranties</string>
    <string name="title_activity_bills">BillsActivity</string>
    <string name="title_activity_warrantis">WarrantisActivity</string>
    <string name="title_activity_cards">CardsActivity</string>
    <string name="title_activity_warranties">WarrantiesActivity</string>
</resources>
