<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.heba.tadbeer.HomeActivity"
    tools:showIn="@layout/activity_home">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:id="@+id/textView2"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards"
        android:id="@+id/button_home_cards"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="68dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:tag="@string/cards"
        android:onClick="goto_page"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bills"
        android:id="@+id/button_home_bills"
        android:layout_below="@+id/button_home_cards"
        android:layout_alignEnd="@+id/button_home_cards"
        android:layout_alignParentStart="true"
        android:tag="@string/bills"
        android:onClick="goto_page"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warranties"
        android:id="@+id/button_home_warranties"
        android:layout_below="@+id/button_home_bills"
        android:layout_alignEnd="@+id/button_home_bills"
        android:layout_alignParentStart="true"
        android:tag="@string/warranties"
        android:onClick="goto_page"/>
</RelativeLayout>
